# configurations

./: .gitignore  init.sh  install.py
.config/alacritty/: alacritty.yml  alacritty_darwin.yml  alacritty_linux.yml
.config/fish/: config.fish
.config/karabiner/: karabiner.json
.config/lvim/: config.lua
.doom.d/: config.el  init.el  packages.el
.doom.d/snippets/python-mode/: torch layer conv  torch layer linear  torch-conv
cron_jobs/: cleanup.sh  crontab
dotfiles/: .alacritty.yml  .gitconfig  .tmux.conf.local  .vimrc  .zshrc
dotfiles/.config/rclone/: rclone.conf
installations/: brew_install.sh  doom-install.sh  init.sh  pip_install
karabiner/: karabiner.json
mac_settings/: .macos
python_useful_scripts/: csv_to_sql.py  cyberoam_connect.py  excel_sample.py  memory  poetry_activate  pyproject.toml
set_it_up/: brew_installs.fish  caps_lock_mod.fish  crontab  install.fish  install_fonts.fish  noto_fonts.bash
set_it_up/crontab/: autocommit.fish  cleanup.fish  crontab.fish  jobs
set_it_up/dotfiles/: .gitconfig
shellconfigs/: alias.sh  env_vars.sh  functions.sh  oh-my-zsh-config.sh
