[tool.poetry]
name = "python_useful_scripts"
version = "0.1.0"
description = ""
authors = ["Akarsh Jain <akarsh.1995.02@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <4"
psutil = "^5.7.2"
argh = "^0.26.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
